plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
    id 'io.freefair.lombok' version '6.5.1'
    id "org.flywaydb.flyway" version "9.2.3"
}

group = 'de.mindmatters.weatherfail'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.projectlombok:lombok:1.18.24'
    implementation 'org.json:json:20220320'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
    implementation 'org.postgresql:postgresql:42.5.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:4.8.0'
    testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
}

tasks.named('test') {
    useJUnitPlatform()
}
